--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/factories/dbFactory.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/MasterController.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/ProductsController.js"></script>
     <script src="js/controllers/BrandsController.js"></script>
     <script src="js/controllers/CategoriesController.js"></script>
@@ -41,7 +42,7 @@
     <script src="js/controllers/ScannerController.js"></script>
   </head>
 
-  <body ng-app="rad" ng-controller="MasterController as masterCntr">
+  <body ng-app="rad" ng-controller="MasterController as masterCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
